--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
   <title>Pusher Test</title>
+  <!-- AngularJS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
   <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
+  <!-- pusher-angular -->
+  <script src="//cdn.jsdelivr.net/angular.pusher/latest/pusher-angular.min.js"></script>
   <script>
     // Enable pusher logging - don't include this in production
     Pusher.log = function(message) {
@@ -16,7 +20,10 @@
 
     var channel = pusher.subscribe('test_channel');
     channel.bind('my_event', function(data) {
-      alert(data.message);
+      alert('from :' + data.name + ' message : ' +data.message );
     });
   </script>
 </head>
+<body>
+
+</body>
